# qdownloader

./: CMakeLists.txt  LICENSE  README.md  qdownloader.cpp  qdownloader.h  qdownloader.rc  qdownloader_global.h
